set up string resources for the menu page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Choose-Your-Own-Adventure</string>
+    <string name="start">START</string>
+    <string name="statistics">STATISTICS</string>
+    <string name="settings">SETTINGS</string>
+    <string name="teamname">teamName</string>
 </resources>
