set up basic layout for the about and settings page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="statistics">STATISTICS</string>
     <string name="settings">SETTINGS</string>
     <string name="teamname">teamName</string>
+    <string name="title">Title</string>
+    <string name="quince_bielka">Quince Bielka</string>
+    <string name="dina_zeng">Dina Zeng</string>
+    <string name="settingsSettings">Settings</string>
+    <string name="settingsStatistics">Statistics</string>
+    <string name="reset_game">Reset Game</string>
+    <string name="game_settings">Game Settings</string>
 </resources>
